src/core/Claroline/PluginBundle/Tests/stub/plugin/Valid/Simple/ValidSimple.php
<?php

namespace Valid\Simple;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class ValidSimple extends ClarolinePlugin
{
    //put your code here
}